# tarantula

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Makefile  PROJECT_STATUS.md  README.md  SOURCE_TREE_OVERVIEW.md  dependency_graph.dot  meson.build  setup.sh
.codex/: setup.sh
.github/: AGENTS.md
.github/codeql/: codeql-config.yml
.github/workflows/: AGENTS.md  build.yml  codeql-analysis.yml  comprehensive-analysis.yml  reviewdog.yml
Domestic/: AGENTS.md
Foreign/: AGENTS.md
dev/: AGENTS.md
docs/: AGENTS.md  COMPREHENSIVE_ANALYSIS_REPORT.md  Doxyfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IPC.md  agents_overview.md  architecture_design.md  building_kernel.md  ci_workflows.md  cmake_upgrade.md  cmu_license_files.txt  codex_bootstrap.md  cross_architecture_porting.md  debug_build_env.md  dependency_graph.dot  exokernel_plan.md  exokernel_subsystems.md  exokernel_testing.md  extras_and_addons.md  fhs_migration.md  file_inventory.txt  file_tree.txt  hybrid_kernel_plan.md  hybrid_plan.md  lattice_ipc_spec.md  makefile_inventory.txt  mandoc_inventory.txt  memory_allocator.md  microkernel_functional_model.md  microkernel_plan.md  minix3_concepts.md  modernization_plan.md  performance_notes.md  posix_compat.md  posix_signals.md  precommit.md  refactor_c23_tasks.md  reorg_continuation_tasks.md  reorg_plan.md  (+5 more)
docs/formal/: I-CAP-1.tla  I-IPC-1.tla  I-MEM-1.tla  I-SCHED-1.tla  README.md  buffer_overflow_check.smt2  capability_ordering.smt2  pointer_safety.smt2
etc/: AGENTS.md  security
etc/systemd/system/: codex-setup.service
include/: dirent.h  exo_ipc.h  exokernel.h  security_mode.h  spinlock.h
modern/tests/: Makefile  memserver_test.c  mprotect_demo.c
offline_packages/: README.md
ports/: README.md
ports/chicken/: README.md  hello.scm
ports/go/: README.md
root/: AGENTS.md
src-headers/: AGENTS.md  arch.h  exokernel.h  fs_server.h  ipc.h  kern_sched.h  libcapnp.h  libipc.h  libvm.h  mailbox_t.h  posix.h  posix_helpers.h  posix_ipc.h  posix_signal.h  proc_manager.h  pthread.h  runqueue.h  sched_lock.h  spinlock.h  spinlock.hpp  timer.h  vnode_if.h
src-headers/compat/svr4/: svr4_machdep.h
src-headers/machine/: ansi.h  cpu.h  endian.h  frame.h  limits.h  param.h  proc.h  signal.h  trap.h  types.h
src-headers/sys/: systm.h  vnode_if.h
src-kernel/: AGENTS.md  Makefile  ipc.c  ipc.h  meson.build  proc_hooks.c  sched_hooks.c  vfs_hooks.c  vm_hooks.c
src-lib/libcapnp/: Makefile  libcapnp.c
src-lib/libipc/: Makefile  ipc.c
src-lib/libkern_sched/: Makefile  kern_sched.c  runqueue.c  sched_lock.c
src-lib/libposix/: Makefile  posix.c  posix_helpers.c  posix_signal.c
src-lib/libtimer/: Makefile  timer.c
src-lib/libvm/: Makefile  swap_pager.c  vm_glue.c  vm_init.c  vm_map.c  vm_meter.c  vm_mmap.c  vm_object.c  vm_page.c  vm_pageout.c  vm_unix.c
src-lib/posix/: Makefile  posix.c
src-lib/pthread/: Makefile  pthread.c
src-uland/: AGENTS.md
src-uland/fs-server/: Makefile  fs_open.c  vfs_bio.c  vfs_cache.c  vfs_cluster.c  vfs_conf.c  vfs_init.c  vfs_lookup.c  vfs_subr.c  vfs_syscalls.c  vfs_vnops.c
src-uland/init/: Makefile  init.c
src-uland/libcapnp/: Makefile
src-uland/libipc/: Makefile  ipc.c  ipc.h  ipc_dummy.c
src-uland/libkern_sched/: Makefile  kern_sched.c
src-uland/libposix/: Makefile
src-uland/libtimer/: Makefile
src-uland/libvm/: Makefile  device_pager.c  vm_entry.c  vm_fault.c  vm_kern.c  vm_page.c  vm_pager.c  vm_swap.c  vm_user.c  vnode_pager.c
src-uland/posix/: Makefile
src-uland/servers/: AGENTS.md
src-uland/servers/memory/: Makefile  memory_server.c
src-uland/servers/proc_manager/: CMakeLists.txt  Makefile  kern_proc.c  pm_entry.c
src-uland/servers/reincarnation/: CMakeLists.txt  Makefile  reincarnation.c
tests/: Makefile  fifo_test.c  mock_vm.c  sched_stub.c  test_kern.c  test_mailbox.c  test_mailbox_timeout.c  test_posix_net.c  test_spinlock.cpp  test_timer.c
tests/include/: proc_manager.h
tests/include/vm/: vm.h
tests/modern/: README.md  posix_ipc_demo.c  posix_signal_demo.c
tests/posix/: Makefile  dirlist.c  inmemfs.c  signal_test.c
tools/: AGENTS.md  Makefile  analyze_codebase.py  bench_vfs_bufstats.c  build_collect_warnings.sh  check_build_env.sh  create_exokernel_image.sh  create_inventory.py  find_cmu_licenses.py  find_or_build_yacc.sh  generate_compiledb.sh  generate_cscope.sh  generate_ctags.sh  generate_dependency_graph.py  list_makefiles.py  migrate_to_fhs.sh  migrate_to_src_layout.sh  organize_sources.sh  post_fhs_cleanup.sh  run_clang_tidy.sh  run_formal_verification.sh  sync_sys_headers.sh  update_dependency_graph.sh
tools/memserver/: Makefile  README.md  main.c
tools/spawn_wait_demo/: Makefile  spawn_wait_demo.c
usr/: AGENTS.md
usr/src/: AGENTS.md  Makefile
usr/src/include/: assert.h  memory.h  mpool.h  stab.h  strings.h
usr/src/lib/libc/string/: strcmp.c  strcpy.c
usr/src/libexec/ftpd/: extern.h  logwtmp.c
usr/src/libpathtrans/: Makefile
usr/src/libpathtrans/config/: config.conf
usr/src/libpathtrans/examples/: Makefile  demo.c
usr/src/libpathtrans/include/: path_database.h
usr/src/libpathtrans/src/: path_database.c  pathtrans.c
usr/src/libpathtrans/tests/: Makefile  run_tests.sh  test_chdir_getcwd.c  test_disable_env.c  test_execve.c  test_link_unlink.c  test_path_database.c  test_translation.c
usr/src/libpathtrans/tools/: Makefile  pathtrans_db.c
usr/src/share/mk/: bsd.lib.mk  bsd.prog.mk  sys.mk
usr/src/sys/: AGENTS.md
usr/src/sys/conf/: files
usr/src/sys/hp300/hp300/: locore.s
usr/src/sys/i386/i386/: locore.s
usr/src/sys/i386/isa/: if_we.c
usr/src/sys/kern/: init_main.c  init_sysent.c  kern_fork.c  kern_runq.c  vfs_bio.c  vfs_syscalls.c
usr/src/sys/libkern/: bcmp.c  ffs.c
usr/src/sys/luna68k/luna68k/: locore.s
usr/src/sys/news3400/news3400/: locore.s
usr/src/sys/pmax/pmax/: locore.s
usr/src/sys/sparc/sparc/: locore2.c
usr/src/sys/sys/: cdefs.h  proc.h  systm.h
usr/src/sys/vm/: vm_fault.c
usr/src/usr.bin/yacc/: CMakeLists.txt
usr/src/usr.sbin/config/: Makefile
var/: AGENTS.md
(+3 files in other folders)
